tests/kyverno-policies/mutate-calico-registry/calico-container-registry-skip.yaml
---
apiVersion: v1
kind: Pod
metadata:
  name: test-calico-container-registry-skip
  namespace: kube-system
spec:
  containers:
    - name: nginx
      image: nginx:latest
