tests/kyverno-policies/mutate-calico-registry/calico-imagepullsecret-skip.yaml
---
apiVersion: v1
kind: Pod
metadata:
  name: test-calico-imagepullsecret-skip
  namespace: kube-system
spec:
  containers:
    - name: nginx
      image: nginx:latest
