tests/kyverno-policies/mutate-calico-registry/calico-initcontainer-registry-mutated.yaml
---
apiVersion: v1
kind: Pod
metadata:
  name: test-calico-initcontainer-registry
  namespace: kube-system
  labels:
    k8s-app: calico-node
spec:
  containers:
  - name: calico-node
    image: docker-registry.osc.edu/kubernetes/calico/node:v3.26.1
    imagePullPolicy: IfNotPresent
  initContainers:
  - name: "mount-bpffs"
    image: docker-registry.osc.edu/kubernetes/calico/node:v3.26.1
    imagePullPolicy: IfNotPresent
