tests/kyverno-policies/mutate-calico-registry/calico-initcontainer-registry-skip.yaml
---
apiVersion: v1
kind: Pod
metadata:
  name: test-calico-initcontainer-registry-skip
  namespace: kube-system
spec:
  containers:
    - name: nginx
      image: nginx:latest
  initContainers:
    - name: init
      image: busybox
