tests/kyverno-policies/mutate-calico-registry/resources.yaml
---
apiVersion: v1
kind: Pod
metadata:
  name: test-calico-container-registry
  namespace: kube-system
  labels:
    k8s-app: calico-node
spec: 
  containers:
  - name: calico-node
    image: docker.io/calico/node:v3.26.1
    imagePullPolicy: IfNotPresent
---
apiVersion: v1
kind: Pod
metadata:
  name: test-calico-container-registry-skip
  namespace: kube-system
  labels:
    foo: bar
spec:
  containers:
    - name: nginx
      image: nginx:latest
---
apiVersion: v1
kind: Pod
metadata:
  name: test-calico-initcontainer-registry
  namespace: kube-system
  labels:
    k8s-app: calico-node
spec:
  containers:
  - name: calico-node
    image: docker.io/calico/node:v3.26.1
    imagePullPolicy: IfNotPresent
  initContainers:
  - name: "mount-bpffs"
    image: docker.io/calico/node:v3.26.1
    imagePullPolicy: IfNotPresent
---
apiVersion: v1
kind: Pod
metadata:
  name: test-calico-initcontainer-registry-skip
  namespace: kube-system
  labels:
    foo: bar
spec:
  containers:
    - name: nginx
      image: nginx:latest
  initContainers:
    - name: init
      image: busybox
---
apiVersion: v1
kind: Pod
metadata:
  name: test-calico-imagepullsecret
  namespace: kube-system
  labels:
    k8s-app: calico-node
spec: 
  containers:
  - name: calico-node
    image: docker-registry.osc.edu/kubernetes/calico/node:v3.26.1
    imagePullPolicy: IfNotPresent
---
apiVersion: v1
kind: Pod
metadata:
  name: test-calico-imagepullsecret-skip
  namespace: kube-system
  labels:
    foo: bar
spec:
  containers:
    - name: nginx
      image: nginx:latest
