tests/kyverno-policies/mutate-calico-registry/kyverno-test.yaml
---
apiVersion: cli.kyverno.io/v1alpha1
kind: Test
metadata:
  name: mutate-calico-registry
policies:
  - policy.yaml
resources:
  - resources.yaml
variables: variables.yaml
results:
  - policy: mutate-calico-registry
    rule: calico-container-registry
    resources:
      - test-calico-container-registry
    patchedResources: calico-container-registry-mutated.yaml
    kind: Pod
    result: pass
  - policy: mutate-calico-registry
    rule: calico-container-registry
    resources:
      - test-calico-container-registry-skip
    kind: Pod
    result: skip
  - policy: mutate-calico-registry
    rule: calico-initcontainer-registry
    resources:
      - test-calico-initcontainer-registry
    patchedResources: calico-initcontainer-registry-mutated.yaml
    kind: Pod
    result: pass
  - policy: mutate-calico-registry
    rule: calico-initcontainer-registry
    resources:
      - test-calico-initcontainer-registry-skip
    kind: Pod
    result: skip
  - policy: mutate-calico-registry
    rule: calico-imagepullsecret
    resources:
      - test-calico-imagepullsecret
    patchedResources: calico-imagepullsecret-mutated.yaml
    kind: Pod
    result: pass
  - policy: mutate-calico-registry
    rule: calico-imagepullsecret
    resources:
      - test-calico-imagepullsecret-skip
    kind: Pod
    result: skip
