tests/kyverno-policies/mutate-calico-registry/variables.yaml
apiVersion: cli.kyverno.io/v1alpha1
kind: Values
metadata:
  name: values
policies:
  - name: mutate-calico-registry
namespaceSelector:
  - name: kube-system
